game_launcher/launcher-k8s/src/main/resources/k8s/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-server
  labels:
    name: game-server
    environment: production
